--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,7 @@
-  <script src="./javascripts/wave.js"></script>
+  
+  <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  
   </body>
 </html>
