--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <% include header %>
     
+    <p style="text-align:center;margin-top:30px"> <a href="/location">定位客户端</a> </p>
     <p style="text-align:center;margin-top:30px"> <a href="/dtime">信标节点</a> </p>
     <p style="text-align:center;margin-top:30px"> <a href="/api2">信标数据</a> </p>
     <p style="text-align:center;margin-top:30px"> <a href="/rdata">接收时间</a> </p>
